<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="${relativePackage}.${activityClass}" >

    <FrameLayout
        android:id="@+id/addedit_contacts_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ProgressBar
            android:id="@+id/addedit_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" >
        </ProgressBar>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="5dp" >

        <LinearLayout
            android:id="@+id/addRule_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addedit_editText_name"
                android:maxLength="20" >
            </EditText>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/addedit_editText_description" />

            <EditText
                android:id="@+id/editText_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/addedit_editText_text"
                android:inputType="textMultiLine" />

            <TableLayout
                android:id="@+id/tableLayout_contacts"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_column="0"
                        android:layout_weight="1"
                        >

                        <TextView
                            android:id="@+id/textView_contactsOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:text="@string/addedit_textView_contacts" />

                        <CheckBox
                            android:id="@+id/checkBox_contactsOnly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|end" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_contactFilter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:onClick="contactsFilterClicked"
                        android:text="@string/addedit_button_contactFilter" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/linearLayout_replyTo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView_replyTo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/addedit_textView_replyTo" />

                <RadioGroup
                    android:id="@+id/radio_replyTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio_both"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:tag="0"
                        android:text="@string/addedit_radio_both" />

                    <RadioButton
                        android:id="@+id/radio_sms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="1"
                        android:text="@string/addedit_radio_sms" />

                    <RadioButton
                        android:id="@+id/radio_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="2"
                        android:text="@string/addedit_radio_call" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>